# euromail-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml
examples/: all_methods.rs
src/: account.rs  analytics.rs  api_keys.rs  audit_logs.rs  billing.rs  client.rs  contact_lists.rs  dead_letters.rs  domains.rs  emails.rs  errors.rs  gdpr.rs  inbound.rs  inbound_routes.rs  insights.rs  lib.rs  mailboxes.rs  newsletters.rs  operations.rs  signup_forms.rs  sub_accounts.rs  suppressions.rs  templates.rs  types.rs  validate.rs  webhooks.rs
tests/: account.rs  analytics.rs  api_keys.rs  contact_lists.rs  emails.rs  errors.rs  gdpr.rs  mailboxes.rs
