[workspace]

[package]
name = "euromail"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Official Rust SDK for EuroMail transactional email service"
license = "MIT"
authors = ["Kalle Works <info@kalle.works>"]
repository = "https://github.com/kalle-works/euromail-rust"
homepage = "https://euromail.dev"
documentation = "https://docs.rs/euromail"
readme = "README.md"
keywords = ["email", "transactional", "smtp", "euromail", "api"]
categories = ["api-bindings", "email"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
